--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="utf-8">
     <title>Shuffle Vote</title>
     <link rel="stylesheet" href="css/master.css" >
-    <script type="text/javascript" src="js/shufflevote.js">
-
-    </script>
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="js/shufflevote.js"></script>
   </head>
   <body>
+    <header>
+      <h1 id="pageHeading">Select Your Favorite</h1>
+    </header>
+    <div id="mainSection">
+      
 
+    </div>
   </body>
 </html>
