--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-      <h1 id="pageHeading">Select Your Favorite</h1>
+      <h1 id="pageHeading">Click on Your Favorite</h1>
     </header>
     <div id="mainSection">
-      
+
 
     </div>
   </body>
