--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
       <h1 id="pageHeading">Click on Your Favorite</h1>
     </header>
     <div id="mainSection">
+      <div class="container">
+        <div class="pic">
+
+        </div>
+        <div class="pic">
+
+        </div>
+        <div class="pic">
+
+        </div>
+
+      </div>
 
 
     </div>
