--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     </header>
     <div id="mainSection">
       <div class="container">
-        <div class="pic">
+        <div class="pic" id="pic1">
+          <img src="" alt="" />
 
         </div>
-        <div class="pic">
+        <div class="pic" id="pic2">
+          <img src="" alt="" />
 
         </div>
-        <div class="pic">
+        <div class="pic" id="pic3">
+          <img src="" alt="" />
 
         </div>
 
