--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <title>Shuffle Vote</title>
     <link rel="stylesheet" href="css/master.css" >
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="js/shufflevote.js"></script>
   </head>
   <body>
     <header>
       <h1 id="pageHeading">Click on Your Favorite</h1>
     </header>
+
     <div id="mainSection">
       <div class="container">
-        <div class="pic" id="pic1">
-          <img src="" alt="" />
+        <div class="pic">
+          <img src="" id="pic1" alt="" />
 
         </div>
-        <div class="pic" id="pic2">
-          <img src="" alt="" />
+        <div class="pic">
+          <img src="" id="pic2" alt="" />
 
         </div>
-        <div class="pic" id="pic3">
-          <img src="" alt="" />
+        <div class="pic">
+          <img src="" id="pic3" alt="" />
 
         </div>
 
@@ -31,4 +31,5 @@
 
     </div>
   </body>
+  <script type="text/javascript" src="js/shufflevote.js"></script>
 </html>
